AC_PREREQ(2.61)
AC_INIT(websum, 0.1, mkroli@yahoo.de)
AC_CONFIG_SRCDIR([websum.c])
AM_INIT_AUTOMAKE
AC_CONFIG_FILES([Makefile])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h curl/curl.h openssl/md5.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_UINT32_T

# Checks for library functions.

AC_OUTPUT
